--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@
         color: white;
         position: relative;
         right: 12.3em;
-        top: 20.7em;
+        top: 21.9em;
     }
     .boxes{
         display: flex;
@@ -176,7 +176,6 @@
     }
     .box1 h2{
         color: #fff;
-        /* padding: 100px; */
         background: rgb(0, 0, 0);
         z-index: -1;
         position: static;
@@ -188,6 +187,7 @@
         color: rgb(255, 255, 255);
         font-weight: bold;
         border-left: 1px solid;
+        padding: 10px;
     }
     .box1{
         text-align: center;
@@ -196,7 +196,7 @@
         min-height: 100px;
         min-width: 400px;
         position: relative;
-        bottom: 7em;
+        bottom: 5.9em;
     }
     .kirja{
         width: 100px;
@@ -216,7 +216,7 @@
         min-width: 400px;
         border-radius: 6px;
         position: relative;
-        bottom: 4.6em;
+        bottom: 3.5em;
     }
     .box2 h2{
         color: #fff;
@@ -230,42 +230,42 @@
         color: rgb(255, 255, 255);
         font-weight: bold;
         border-left: 1px solid;
+        padding: 10px;
     }
     .taidot{
-        width: 68px;
+        width: 65px;
         position: relative;
         top: 10.2em;
         left: 9em;
     }
-    .box3 ol{
-        text-decoration: underline;
-        list-style: none;
-        font-weight: bold;
-        font-size: 1em;
-        color: rgb(0, 0, 0);
-        font-weight: bold;
-        border-right: 10px;
-        border-style: inset;
-    }
     .box3 h1{
         padding: 10px;
     }
+    .box3{
+        text-align: center;
+        color: rgba(0, 0, 0, 0.459);
+        max-width: 400px;
+        min-width: 400px;
+        border-radius: 6px;
+        position: relative;
+    }
     .box3 h2{
         color: #fff;
+        background: rgb(0, 0, 0);
+        position: static;
         font-size: 3em;
-        background: black;
         border-radius: 10px;
     }
     .link{
         color: white;
         position: relative;
-        right: 1.2em;
+        right: 8.8em;
         top: 0.9em;
     }
     .link2{
         color: white;
         position: relative;
-        right: 1.7em;
+        right: 8.7em;
         top: 5.1em;
     }
     .box3 a{
@@ -283,10 +283,11 @@
         width: 60px;
         position: relative;
         top: 7em;
-        left: 13em;
+        left: 10em;
     }
     .Work h1{
         color: rgb(255, 255, 255);
+        background-color: #000;
         position: relative;
         justify-content: center;
         display: flex;
@@ -389,6 +390,13 @@
         border: 2px solid;
         color: #fff;
     }
+    .send{
+        border-radius: 10px;
+        background-color: #2b2b2b;
+        color: #fff;
+        width: 7em;
+        border-color: white;
+    }
 }
 
 
@@ -436,9 +444,10 @@
       width: 10px;
     }
     #mail{
-        width: 81px;
+        width: 79px;
         position: relative;
-        left: 32%;
+        left: 36%;
+        top: 16.6em;
     }
     section{
         width: 100%;
@@ -584,25 +593,11 @@
         text-align: center;
     }
     .box3 a{
-        text-decoration: underline;
-        list-style: none;
         font-weight: bold;
-        font-size: 1em;
-        color: rgb(50, 63, 243);
+        font-size: 2em;
+        color: rgb(68, 17, 252);
         font-weight: bold;
-        font-size: 30px;
-        padding: 10px;
-        border-left: 1px solid;
-    }
-    .box3 ol{
-        text-decoration: underline;
-        list-style: none;
-        font-weight: bold;
-        font-size: 1em;
-        color: rgb(0, 0, 0);
-        font-weight: bold;
-        border-right: 10px;
-        border-style: inset;
+        outline: #000;
     }
     .Work h1{
         color: rgb(255, 255, 255);
@@ -644,6 +639,7 @@
         margin-top: 60px;
         width: 100%;
         height: 30em;
+        padding-bottom: 55px;
     }
 
     .aboutme h2{
@@ -700,7 +696,9 @@
         visibility: hidden;
     }
     .github{
-        visibility: hidden;
-        overflow: hidden;
+        position: relative;
+        top: 6.5em;
+        left: 17em;
+        width: 40px;
     }
 }
