--- a/style.css
+++ b/style.css
@@ -423,28 +423,6 @@
         top: 16em;
     }
 
-    .btn1{
-        background-image: linear-gradient(
-            to right,
-            #a7a7a7,
-            #2b2b2b 50%,
-            #000 50%
-          );
-          background-size: 200% 100%;
-          background-position: -100%;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          transition: all 0.3s ease-in-out;
-    }
-    .btn1:before {
-        content: '';
-        background: #ffffff;
-        position: relative;
-    }
-
-    .btn1:hover {
-        background-position: 0;
-    }
     .taidot{
       visibility: hidden;
       width: 10px;
@@ -499,6 +477,7 @@
         color: rgb(0, 0, 0);
         z-index: 1000;
         cursor: pointer;
+        padding-left: 10px;
     }
     header ul li{
         text-decoration: none;
@@ -544,7 +523,7 @@
     }
     header ul li a{
         text-decoration: none;
-        padding: 10px;
+        padding: 5px;
         color: rgb(0, 0, 0);
         font-size: 100%;
         font-weight: bold;
