--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 {
     scroll-behavior: smooth;
 }
-@media screen and (min-width:769px) and (max-width: 2440px){
+@media screen and (min-width:769px){
     header #alkuteksti{
         position: relative;
         z-index: 2;
