--- a/style.css
+++ b/style.css
@@ -116,35 +116,48 @@
     }
     section{
         width: 100%;
+        flex-direction: column;
         position: relative;
-        width: -webkit-fill-available;
         display: flex;
-        justify-content: left;
         border-bottom: inset;
-        height: 35em;
+        height: 36em;
+        align-items: start;
     }
-    section #Jere{
-        position: relative;
+    .tausta{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+    }
+    #Jere{
         font-size: 5em;
-        top: 32%;
-        left: 184px;
-    }
-    section #Aronsalo{
+        margin-top: 2em;
+        margin-left: 16px;
+        z-index: 1;
         position: relative;
+        left: 1em;
+    }
+    #Aronsalo{
         font-size: 5em;
-        top: 3em;
-        left: 0%;
-    }
-    section #alateksti{
+        margin-top: 7em;
+        margin-left: 0%;
         position: relative;
-        top: 21em;
-        right: 421px;
+        z-index: 1;
+        bottom: 8.5em;
+        margin-bottom: 10em;
+        left: 1em;
+    }
+    #alateksti{
+        position: relative;
         background: black;
-        color: #fff;
+        color: rgb(255, 255, 255);
         border-radius: 6px;
         padding: 7px;
         height: 27px;
         margin-bottom: 10em;
+        z-index: 1;
+        bottom: 82em;
+        left: 4em;
+        margin-top: 2em;
     }
     header ul li a{
         text-decoration: none;
@@ -514,7 +527,7 @@
         background: black;
         color: #fff;
         border-radius: 6px;
-        padding: 7px;
+        padding: 7px 1em 7px 8px;;
         text-align: center;
         max-height: 23px;
         font-size: 14px;
