--- a/style.css
+++ b/style.css
@@ -120,13 +120,15 @@
         position: relative;
         display: flex;
         border-bottom: inset;
-        height: 36em;
+        height: 39em;
         align-items: start;
+        margin-bottom: 35px;
     }
     .tausta{
         width: 100%;
         height: 100%;
         position: absolute;
+
     }
     #Jere{
         font-size: 5em;
@@ -135,6 +137,7 @@
         z-index: 1;
         position: relative;
         left: 1em;
+        top: 0.18em;
     }
     #Aronsalo{
         font-size: 5em;
@@ -142,7 +145,7 @@
         margin-left: 0%;
         position: relative;
         z-index: 1;
-        bottom: 8.5em;
+        bottom: 8.4em;
         margin-bottom: 10em;
         left: 1em;
     }
@@ -158,6 +161,7 @@
         bottom: 82em;
         left: 4em;
         margin-top: 2em;
+        padding-right: 34px;
     }
     header ul li a{
         text-decoration: none;
@@ -261,6 +265,7 @@
         min-width: 400px;
         border-radius: 6px;
         position: relative;
+        bottom: 4px;
     }
     .box3 h2{
         color: #fff;
@@ -435,7 +440,9 @@
         left: 18%;
         top: 16em;
     }
-
+    .tausta{
+        visibility: hidden;
+    }
     .taidot{
       visibility: hidden;
       width: 10px;
