--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@
         position: relative;
         width: 100%;
         z-index: 2;
+        height: 100%;
     }
     .tausta{
         width: 100%;
