--- a/style.css
+++ b/style.css
@@ -28,8 +28,11 @@
         justify-content: space-between;
         align-items: center;
         z-index: 1000;
-        background-color: #fff;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
         border-bottom: groove;
+        border: 1px solid rgba(255, 255, 255, 0.3);
     }
     header ul{
         display: flex;
