--- a/style.css
+++ b/style.css
@@ -7,19 +7,19 @@
     header #alkuteksti{
         position: relative;
         z-index: 2;
-        color: black;
+        color: rgb(255, 255, 255);
         right: 2%;
         margin-bottom: 0px;
         top: -13px;
     }
     body{
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0);
         font-family: 'Poppins';
         overflow-x: hidden;
     }
     header{
         font-family: 'Poppins';
-        font-size: 17px;
+        font-size: 20px;
         position: sticky;
         top: 0;
         left: 0;
@@ -28,7 +28,7 @@
         justify-content: space-between;
         align-items: center;
         z-index: 1000;
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(64 52 81 / 38%);
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(5px);
         border-bottom: groove;
@@ -54,9 +54,9 @@
     .btn1{
         background-image: linear-gradient(
             to right,
-            #a7a7a7,
+            #cfca8c,
             #2b2b2b 50%,
-            #000 50%
+            #ffffff 50%
           );
           background-size: 200% 100%;
           background-position: -100%;
@@ -77,9 +77,9 @@
     .btn2{
      background-image: linear-gradient(
             to right,
-            #a7a7a7,
+            #cfca8c,
             #2b2b2b 50%,
-            #000 50%
+            #ffffff 50%
           );
           background-size: 200% 100%;
           background-position: -100%;
@@ -100,9 +100,9 @@
     .btn3{
     background-image: linear-gradient(
         to right,
-        #a7a7a7,
+        #cfca8c,
         #2b2b2b 50%,
-        #000 50%
+        #ffffff 50%
         );
         background-size: 200% 100%;
         background-position: -100%;
@@ -118,15 +118,11 @@
     .btn3:hover {
         background-position: 0;
     }
-    .JA{
-        transform: scale(0.5);
-    }
     section{
         width: 100%;
         flex-direction: column;
         position: relative;
         display: flex;
-        border-bottom: inset;
         height: 39em;
         align-items: start;
         margin-bottom: 35px;
@@ -183,13 +179,13 @@
         font-weight: bold;
     }
     .paragraph1{
-        color: white;
+        color: #ffffff;
         position: relative;
         right: 12.3em;
         top: 10.6em;
     }
     .paragraph2{
-        color: white;
+        color: #ffffff;
         position: relative;
         right: 12.3em;
         top: 21.9em;
@@ -201,11 +197,11 @@
         color: rgb(0, 0, 0);
         padding: 2%;
         background-color: #000;
-        background: linear-gradient(to right, rgb(36, 71, 231), rgb(236, 236, 236));
+        /* background: linear-gradient(to right, rgb(64 52 81), rgb(236, 236, 236)); */
     }
     .box1 h2{
         color: #fff;
-        background: rgb(0, 0, 0);
+        background: rgb(64 52 81 / 38%);
         z-index: -1;
         position: static;
         font-size: 3em;
@@ -213,7 +209,7 @@
     }
     .box1 p{
         font-size: 25px;
-        color: rgb(255, 255, 255);
+        color: white;
         font-weight: bold;
         border-left: 1px solid;
         padding: 10px;
@@ -249,14 +245,14 @@
     }
     .box2 h2{
         color: #fff;
-        background: rgb(0, 0, 0);
+        background: rgb(64 52 81 / 38%);
         position: static;
         font-size: 3em;
         border-radius: 10px;
     }
     .box2 p{
         font-size: 25px;
-        color: rgb(255, 255, 255);
+        color: #ffffff;
         font-weight: bold;
         border-left: 1px solid;
         padding: 10px;
@@ -281,19 +277,19 @@
     }
     .box3 h2{
         color: #fff;
-        background: rgb(0, 0, 0);
+        background: rgb(64 52 81 / 38%);
         position: static;
         font-size: 3em;
         border-radius: 10px;
     }
     .link{
-        color: white;
+        color: #ffffff;
         position: relative;
         right: 8.8em;
         top: 0.9em;
     }
     .link2{
-        color: white;
+        color: #ffffff;
         position: relative;
         right: 8.7em;
         top: 5.1em;
@@ -303,7 +299,7 @@
         list-style: none;
         font-weight: bold;
         font-size: 1em;
-        color: rgb(50, 63, 243);
+        color: #ffffff;
         font-weight: bold;
         font-size: 30px;
         padding: 10px;
@@ -317,7 +313,7 @@
     }
     .Work h1{
         color: rgb(255, 255, 255);
-        background-color: #000;
+        background: rgb(64 52 81 / 38%);
         position: relative;
         justify-content: center;
         display: flex;
@@ -351,7 +347,7 @@
         flex: 50%;
         display: flex;
         background-color: rgb(0, 0, 0);
-        color: #fff;
+        color: #cfca8c;
         text-align: center;
         z-index: 1;
         position: relative;
@@ -399,7 +395,7 @@
       }
     .footer{
         background-color: black;
-        color: #fff;
+        color: white;
         padding-bottom: 19em;
         position: relative;
         width: 100%;
@@ -441,14 +437,14 @@
         padding: 1.5em;
         background: rgba(255, 255, 255, 0.041);
         border: 2px solid;
-        color: #fff;
+        color: #cfca8c;
     }
     .send{
         border-radius: 10px;
         background-color: #2b2b2b;
-        color: #fff;
+        color: #cfca8c;
         width: 7em;
-        border-color: white;
+        border-color: #cfca8c;
     }
     .totop{
         color: white;
@@ -457,6 +453,7 @@
     }
     .lopputeksti{
         margin-bottom: 10px;
+        color: white;
     }
 }
 
@@ -724,13 +721,13 @@
         top: 10em;
     }
     .paragraph1{
-        color: white;
+        color: #cfca8c;
         position: relative;
         right: 12.3em;
         top: 10.6em;
     }
     .paragraph2{
-        color: white;
+        color: #cfca8c;
         position: relative;
         right: 12.3em;
         top: 20.7em;
