--- a/style.css
+++ b/style.css
@@ -44,6 +44,16 @@
         cursor: pointer;
 
     }
+    .error{
+        font-size: 20px;
+        text-align: center;
+        margin-left: 50%;
+        margin-right: 50%;
+        z-index: 0;
+        color: #cfca8c;
+        right: 100em;
+        position: static;
+    }
     header ul li{
         text-decoration: none;
         list-style: none;
@@ -147,24 +157,11 @@
         height: 100%;
         position: absolute;
     }
-    #Jere{
-        font-size: 5em;
+    .Jere{
+        width: 416px;
+        height: 442px;
+        border-radius: 54%;
         margin-top: 2em;
-        margin-left: 16px;
-        z-index: 1;
-        position: relative;
-        left: 1em;
-        top: 0.18em;
-    }
-    #Aronsalo{
-        font-size: 5em;
-        margin-top: 7em;
-        margin-left: 0%;
-        position: relative;
-        z-index: 1;
-        bottom: 8.4em;
-        margin-bottom: 10em;
-        left: 1em;
     }
     #alateksti{
         position: relative;
@@ -207,6 +204,7 @@
         padding: 2%;
         background-color: #000;
         /* background: linear-gradient(to right, rgb(64 52 81), rgb(236, 236, 236)); */
+        box-shadow: 0 0px 30px rgba(64 52 81 / 38%);
     }
     .box1 h2{
         color: #fff;
@@ -238,7 +236,7 @@
         overflow: hidden;
         position: relative;
         left: 10em;
-        top: 11.3em;
+        top: 11.5em;
     }
     .box1 h1{
         padding: 10px;
@@ -269,7 +267,7 @@
     .taidot{
         width: 65px;
         position: relative;
-        top: 10.2em;
+        top: 10.4em;
         left: 9em;
     }
     .box3 h1{
@@ -277,7 +275,7 @@
     }
     .box3{
         text-align: center;
-        color: rgba(0, 0, 0, 0.459);
+        color: rgba(0, 0, 0, 0);
         max-width: 400px;
         min-width: 400px;
         border-radius: 6px;
@@ -313,6 +311,11 @@
         font-size: 30px;
         padding: 10px;
         border-left: 1px solid;
+        transition: all 0.2s ease-in-out;
+    }
+    .box3 a:hover{
+        color: rgb(255, 255, 255);
+        box-shadow: 0 0px 30px rgba(145, 92, 182, .4);
     }
     .github{
         width: 60px;
@@ -335,7 +338,6 @@
         justify-content: space-around;
         display: flex;
         position: relative;
-        
     }
     .Work #video2{
         background-color: black;
@@ -377,11 +379,13 @@
 
     .aboutme h2{
         position: relative;
+        width: 34%;
     }
     .aboutme p{
         position: relative;
         margin-top: 2%;
         max-width: 35em;
+        font-size: 20px;
     }
     /* .info {
         left: 52%;
@@ -395,13 +399,18 @@
         display: flex;
         /* margin-top: 20px; */
       }
-      
+      .experience{
+        width: 50%;
+        height: 100%;
+      }
       .column {
         flex: 50%;
         text-align: center;
-        padding: 6em;
-        font-size: 16px;
+        padding-left: 2em;
+        font-size: 20px;
         padding-bottom: 6em;
+        height: 50%;
+        padding-right: 2em;
       }
     .footer{
         background-color: black;
@@ -518,9 +527,10 @@
         display: none;
     }
     body{
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(0, 0, 0);
         font-family: 'Poppins';
         overflow-x: hidden;
+        width: 100%;
     }
     header{
         font-family: 'Poppins';
@@ -598,8 +608,8 @@
     .boxes{
         color: rgb(0, 0, 0);
         background-color: #000;
-        background: linear-gradient(to right, rgb(36, 71, 231), rgb(236, 236, 236));
         padding: 20px;
+        text-align: center;
     }
     .box1 h1{
         padding: 10px;
@@ -691,17 +701,15 @@
         position: relative;
         margin-top: 60px;
         width: 100%;
-        height: 30em;
+        height: 60em;
         padding-bottom: 55px;
     }
 
     .aboutme h2{
         position: relative;
-        bottom: 21em;
     }
     .aboutme p{
         position: relative;
-        bottom: 33.8em;
         padding: 1em;
     }
     .footer{
@@ -767,10 +775,18 @@
     .column {
         padding: 1em;
         font-size: 20px;
+        background-color: #000;
 }
     .lopputeksti{
         margin-bottom: 1px;
         padding: 0.5em;
         text-align: center;
+    }
+    .experience{
+        visibility: hidden;
+        height: 0px;
+      }
+      .Jere{
+        visibility: hidden;
     }
 }
