--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
         background-color: rgb(0, 0, 0);
         font-family: 'Poppins';
         overflow-x: hidden;
+        width: 100%;
+        margin: 0;
     }
     header{
         font-family: 'Poppins';
