--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
-*
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,700&family=Roboto:wght@300&display=swap');
+
+
 {
     scroll-behavior: smooth;
 }
@@ -11,6 +13,7 @@
         right: 2%;
         margin-bottom: 0px;
         top: -13px;
+        font-family: 'Roboto Condensed', sans-serif;
     }
     body{
         background-color: rgb(0, 0, 0);
@@ -62,6 +65,7 @@
         color: rgb(255, 255, 255);
         z-index: 1000;
         min-width: 100px;
+        font-family: 'Roboto Condensed', sans-serif;
     }
     .btn1{
         background-image: linear-gradient(
@@ -164,6 +168,7 @@
         height: 442px;
         border-radius: 54%;
         margin-top: 2em;
+        background-color: white;
     }
     #alateksti{
         position: relative;
@@ -369,14 +374,7 @@
         width: 100%;
         max-height: 40em;
         justify-content: space-evenly;
-    }
-    .aboutme .koodikuva{
-        z-index: -1;
-        position: relative;
-        opacity: 0.15;
-        height: 106%;
-        width: 157%;
-        bottom: 50px;
+        font-family: 'Roboto', sans-serif;
     }
 
     .aboutme h2{
@@ -399,20 +397,22 @@
     } */
     .row {
         display: flex;
-        /* margin-top: 20px; */
+        height: 50em;
       }
       .experience{
         width: 50%;
         height: 100%;
       }
       .column {
-        flex: 50%;
+        /* flex: 50%; */
         text-align: center;
         padding-left: 2em;
-        font-size: 20px;
-        padding-bottom: 6em;
-        height: 50%;
+        font-size: 17,5px;
+        /* padding-bottom: 6em;
+        height: 50%; */
         padding-right: 2em;
+        position: relative;
+        margin-top: 5em;
       }
     .footer{
         background-color: black;
