--- a/style.css
+++ b/style.css
@@ -365,36 +365,33 @@
     .aboutme{
         flex: 50%;
         display: flex;
-        background-color: rgb(0, 0, 0);
         color: #cfca8c;
         text-align: center;
         z-index: 1;
         position: relative;
         margin-top: 60px;
         width: 100%;
-        max-height: 40em;
+        /* max-height: 40em; */
         justify-content: space-evenly;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Roboto Condensed', sans-serif;
+        overflow-y: clip;
+        font-size: 12px;
     }
 
     .aboutme h2{
         position: relative;
-        width: 34%;
+        color: white;
+        margin-bottom: 2%;
     }
     .aboutme p{
         position: relative;
         margin-top: 2%;
         max-width: 35em;
-        font-size: 20px;
+        font-size: 1vw;
+        color: #cfca8c;
+        font-family: 'Poppins';
+        font-weight: 100;
     }
-    /* .info {
-        left: 52%;
-        position: relative;
-        z-index: 1;
-        background-color: black;
-        color: white;
-        padding-bottom: 20em;
-    } */
     .row {
         display: flex;
         height: 50em;
@@ -432,10 +429,10 @@
         position: relative;
     }
     #mail{
-        width: 83px;
+        width: 79px;
         position: relative;
         left: 82%;
-        top: 0.5em;
+        top: 0.4em;
     }
     .footer .Contact{
         font-size: 30px;
