--- a/style.css
+++ b/style.css
@@ -382,6 +382,7 @@
         position: relative;
         color: white;
         margin-bottom: 2%;
+        font-size: 1.2vw;
     }
     .aboutme p{
         position: relative;
@@ -395,21 +396,22 @@
     .row {
         display: flex;
         height: 50em;
+        width: 100%;
+        justify-content: space-evenly;
+        height: 42vw;
+        font-size: 1vw;
       }
       .experience{
         width: 50%;
         height: 100%;
       }
       .column {
-        /* flex: 50%; */
+        flex: 50%;
         text-align: center;
         padding-left: 2em;
-        font-size: 17,5px;
-        /* padding-bottom: 6em;
-        height: 50%; */
         padding-right: 2em;
         position: relative;
-        margin-top: 5em;
+        margin-top: 3em;
       }
     .footer{
         background-color: black;
@@ -492,7 +494,7 @@
         width: 90px;
         position: relative;
         left: 18%;
-        top: 16em;
+        top: 14em;
     }
     .tausta{
         visibility: hidden;
@@ -502,10 +504,10 @@
       width: 10px;
     }
     #mail{
-        width: 79px;
+        width: 72px;
         position: relative;
         left: 36%;
-        top: 15.6em;
+        top: 13.5em;
     }
     section{
         width: 100%;
@@ -530,10 +532,11 @@
         font-family: 'Poppins';
         overflow-x: hidden;
         width: 100%;
+        margin: 0;
     }
     header{
         font-family: 'Poppins';
-        font-size: 22px;
+        font-size: 18px;
         position: sticky;
         top: 0;
         left: 0;
@@ -542,9 +545,12 @@
         justify-content: space-between;
         align-items: center;
         z-index: 1000;
-        background-color: #fff;
+        background: rgba(64 52 81 / 38%);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
         border-bottom: groove;
-        max-height: 100px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        max-height: 92px;
     }
     header ul{
         display: flex;
@@ -558,7 +564,7 @@
     header ul li{
         text-decoration: none;
         list-style: none;
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
         z-index: 1000;
         min-width: 100px;
     }
@@ -569,7 +575,7 @@
         display: flex;
         justify-content: left;
         border-bottom: inset;
-        height: 35em;
+        height: 20em;
     }
     section #Jere{
         position: relative;
@@ -582,6 +588,21 @@
         font-size: 4.2em;
         top: 250px;
         right: 137px;
+    }
+    .titlevideo{
+        position: relative;
+        width: 100%;
+        z-index: 2;
+        height: 100%;
+    }
+    #sliderplayer-0 {
+        position: absolute;
+        width: 100%;
+        height: 41%;
+        bottom: 0px;
+        left: 0;
+        margin-left: 0;
+        top: 0%;
     }
     section #alateksti{
         position: relative;
@@ -600,7 +621,7 @@
     header ul li a{
         text-decoration: none;
         padding: 5px;
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
         font-size: 100%;
         font-weight: bold;
     }
@@ -620,7 +641,7 @@
     .box1 h2{
         color: #fff;
         font-size: 3em;
-        background: black;
+        background: rgb(64 52 81 / 38%);
         border-radius: 10px;
         text-align: center;
     }
@@ -630,7 +651,7 @@
     .box2 h2{
         color: #fff;
         font-size: 3em;
-        background: black;
+        background: rgb(64 52 81 / 38%);
         border-radius: 10px;
         text-align: center;
     }
@@ -638,6 +659,7 @@
         font-size: 25px;
         color: rgb(255, 255, 255);
         font-weight: bold;
+        border-left: 1px solid;
     }
     .box3 h1{
         padding: 10px;
@@ -646,18 +668,19 @@
         font-size: 25px;
         color: rgb(255, 255, 255);
         font-weight: bold;
+        border-left: 1px solid;
     }
     .box3 h2{
         color: #fff;
         font-size: 3em;
-        background: black;
+        background: rgb(64 52 81 / 38%);
         border-radius: 10px;
         text-align: center;
     }
     .box3 a{
         font-weight: bold;
         font-size: 2em;
-        color: rgb(68, 17, 252);
+        color: #ffffff;
         font-weight: bold;
         outline: #000;
     }
@@ -666,7 +689,7 @@
         position: relative;
         justify-content: center;
         display: flex;
-        background-color: rgb(0, 0, 0);
+        background: rgb(64 52 81 / 38%);
         width: 8em;
         left: 14%;
         border-radius: 10px;
@@ -710,6 +733,10 @@
     .aboutme p{
         position: relative;
         padding: 1em;
+        color: #cfca8c;
+        font-family: 'Poppins';
+        font-weight: 100;
+        margin-top: 2%;
     }
     .footer{
         margin-top: 40px;
@@ -740,13 +767,13 @@
     .paragraph1{
         color: #cfca8c;
         position: relative;
-        right: 12.3em;
+        right: 11.3em;
         top: 10.6em;
     }
     .paragraph2{
         color: #cfca8c;
         position: relative;
-        right: 12.3em;
+        right: 11.3em;
         top: 20.7em;
     }
     .link{
@@ -758,8 +785,8 @@
     .github{
         position: relative;
         top: 6.5em;
-        left: 17em;
-        width: 40px;
+        /* width: 40px; */
+        visibility: hidden;
     }
     .totop{
         color: white;
@@ -775,6 +802,10 @@
         padding: 1em;
         font-size: 20px;
         background-color: #000;
+        position: relative;
+        margin-top: 10em;
+        text-align: center;
+        padding-left: 2em;
 }
     .lopputeksti{
         margin-bottom: 1px;
@@ -787,5 +818,6 @@
       }
       .Jere{
         visibility: hidden;
+        width: 0;
     }
 }
