--- a/style.css
+++ b/style.css
@@ -355,6 +355,9 @@
         justify-content: space-around;
         display: flex;
         position: relative;
+        overflow: hidden;
+        z-index: 1;
+        
     }
     .Work #video2{
         background-color: black;
@@ -371,6 +374,7 @@
         border-radius: 10px;
         width: 650px; 
         height: 400px;
+
     }
     .aboutme{
         flex: 50%;
@@ -387,16 +391,56 @@
         overflow-y: clip;
         font-size: 12px;
     }
+    @property --gap{
+        syntax: '<length>';
+        inherits: true;
+        initial-value: 0;
+      }
+      @property --angle{
+        syntax: '<angle>';
+        inherits: true;
+        initial-value: 0deg;
+      }
     .Jere{
-        width: 416px;
-        height: 100%;
-        /* border-radius: 54%; */
-        margin-top: 2em;
-        background-color: white;
-        box-shadow: inset 0px 100px 400px 10px black;
-        z-index: 2;
+        z-index: 3;
+        --border: 15px;
+        --gap: 12px;
+        --color: #031129;
         
-    }
+        width: 25%;
+        aspect-ratio: 1;
+        box-sizing: border-box;
+        border-radius: 50%;
+        margin: 20px;
+        cursor: pointer;
+        padding: calc(var(--border) + var(--gap));
+        
+        --angle: 90deg;
+        background:
+          radial-gradient(farthest-side,var(--color) 97%,#0000 101%) 85.35% 85.35%,
+          conic-gradient(from calc(180deg - var(--angle)/2),#0000 var(--angle),var(--color) 0),
+          radial-gradient(farthest-side,var(--color) 97%,#0000 101%) 14.65% 85.35%;
+        background-size: var(--border) var(--border),auto;
+        background-repeat: no-repeat;
+        
+        -webkit-mask:
+          radial-gradient(farthest-side, 
+           #000  calc(99%  - calc(var(--border) + var(--gap))),
+           #0000 calc(100% - calc(var(--border) + var(--gap))) 
+                 calc(99%  - var(--border)), 
+           #000  calc(100% - var(--border)));
+                mask:
+          radial-gradient(farthest-side, 
+           #000  calc(99%  - calc(var(--border) + var(--gap))),
+           #0000 calc(100% - calc(var(--border) + var(--gap))) 
+                 calc(99%  - var(--border)), 
+           #000  calc(100% - var(--border)));
+        transition: --angle .4s,--gap .4s;
+      }
+      .Jere:hover {
+        --angle: 0deg;
+        --gap: 5px;
+      }
     .overlay4{
         position: absolute;
         width: 100%;
